--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
-    "turkce": "^2.0.1"
+    "socket.io": "^4.7.5",
+    "turkce": "^2.0.1",
+    "ws": "^8.16.0"
   }
 }
