--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.73.6",
     "react-native-restart": "^0.0.27",
     "react-native-websocket": "^1.0.2",
+    "socket.io-client": "^4.7.5",
     "ws": "^8.16.0"
   },
   "devDependencies": {
